<resources>
    <string name="app_name">calculadora</string>
    <string name="_0">0</string>
    <string name="c">C</string>
    <string name="power">x²</string>
    <string name="root">²√x</string>
    <string name="backspace">←</string>
    <string name="parenthesesO">(</string>
    <string name="_7">7</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_3">3</string>
    <string name="_6">6</string>
    <string name="_9">9</string>
    <string name="parenthesesC">)</string>
    <string name="mod">MOD</string>
    <string name="_8">8</string>
    <string name="plus">+</string>
    <string name="multiply">*</string>
    <string name="substract">-</string>
    <string name="equals">=</string>
    <string name="division">÷</string>
    <string name="decimal">.</string>
</resources>